--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,8 @@ name: My Selenium 2
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 */6 * * *'  # Chạy mỗi 3 giờ
+    - cron: '0 0,6,12,18 * * *'
+    #- cron: '0 */6 * * *'  # Chạy mỗi 3 giờ
 
 jobs:
   youtube_bot:
